[package]
name = "cheetah-gb28181-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
cheetah-sdk = { path = "../../../sdk/cheetah-sdk" }
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
