[package]
name = "cheetah-hls-driver-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
cheetah-hls-core = { path = "../core" }
cheetah-runtime-api = { path = "../../../runtime/cheetah-runtime-api" }
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"] }
parking_lot.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
cheetah-runtime-tokio = { path = "../../../runtime/cheetah-runtime-tokio" }
