[package]
name = "cheetah-hls-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
cheetah-codec = { path = "../../../foundation/cheetah-codec" }
cheetah-hls-core = { path = "../core" }
cheetah-hls-driver-tokio = { path = "../driver-tokio" }
cheetah-runtime-api = { path = "../../../runtime/cheetah-runtime-api" }
cheetah-sdk = { path = "../../../sdk/cheetah-sdk" }
flate2 = { version = "1", default-features = false, features = ["miniz_oxide"] }
futures.workspace = true
getrandom.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
cheetah-runtime-tokio = { path = "../../../runtime/cheetah-runtime-tokio" }
