[package]
name = "cheetah-http-flv-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
cheetah-codec = { path = "../../../foundation/cheetah-codec", default-features = false }
cheetah-rtmp-core = { path = "../../rtmp/core", default-features = false }
sha1 = { version = "0.10", default-features = false }
thiserror.workspace = true
