[package]
name = "cheetah-http-flv-driver-tokio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
cheetah-http-flv-core = { path = "../core" }
cheetah-runtime-api = { path = "../../../runtime/cheetah-runtime-api" }
parking_lot.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true

[dev-dependencies]
cheetah-runtime-tokio = { path = "../../../runtime/cheetah-runtime-tokio" }
